cmake_minimum_required(VERSION 3.17)
project(gameboy_disassemble)

set(CMAKE_CXX_STANDARD 17)

add_executable(gameboy_debug main.cpp disassembler.cpp disassembler.h instructions/instructions.h instructions/instructions_constants.h instructions/instructions_conversions.h instructions/instructions_conversions.cpp instructions/instructions_load_8bit.h instructions/instructions_conversions.hpp instructions/instructions_load_16bit.h instructions/instructions_rotation.h instructions/instructions_increment_decrement.h instructions/instructions_interface.cpp instructions/instructions_interface.h instructions/instructions_jump.h instructions/instructions_add_subtract.h instructions/instructions_unused.h)